src/objects/Plant__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Geo_Location__c</fullName>
        <label>Plant Geo Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Plant_Number__c</fullName>
        <label>Plant Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Plant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plant_Number__c</columns>
        <columns>city__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Plant_Geo_Location__Latitude__s</columns>
        <columns>Plant_Geo_Location__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>